work row align fixed

--- a/Assets/CSS/portfolio.css
+++ b/Assets/CSS/portfolio.css
@@ -12,13 +12,14 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 1.6rem;
   padding: 1.6rem;
+  margin-top: 4.8rem;
 }
 
 .single-work {
   position: relative;
   border: 2px solid #1f8c81;
   border-radius: 10px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .single-work .work-img img {
@@ -35,7 +36,19 @@
 
 .work-title {
   font-size: 2.4rem;
+  font-weight: 500;
   text-transform: uppercase;
+  color: #fff;
+}
+
+.line {
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  transform: translate(0%, -50%);
+  background-color: #fff;
+  height: 3px;
+  width: 90%;
 }
 
 /* 
